# storage/api-docs/api-docs.json
@@ -482,6 +482,65 @@
                 }
             }
         },
+        "/api/country": {
+            "get": {
+                "tags": [
+                    "country"
+                ],
+                "summary": "system country",
+                "description": "Returns system countries",
+                "operationId": "CountryIndexHome",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
+        "/api/country/{id}": {
+            "get": {
+                "tags": [
+                    "country"
+                ],
+                "summary": "get country",
+                "description": "Returns single country  data",
+                "operationId": "getCountryIdHome",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "country id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/merchant/register": {
             "post": {
                 "tags": [
